--- a/batch1/outputs/tableHeader.tex
+++ b/batch1/outputs/tableHeader.tex
@@ -1,11 +1,10 @@
-\title{\textit{Planck} Collaboration: Cosmological Parameter Tables with $95\%$ limits}
+\title{\textit{Planck} 2013 Results: Cosmological Parameter Tables}
 
 
 %\titlerunning{Planck Cosmological Parameter Tables}
-%\authorrunning{Planck Collaboration}
 \maketitle
 \begin{abstract}
-These tables summarize the results of \textit{Planck} parameter estimation exploration results. They include Planck data in combination with WMAP polarization, \textit{Planck} lensing, and high-$l$ CMB experiments, as well as additional non-CMB data as detailed in the main parameter papers.
+These tables summarize the results of \textit{Planck} nominal mission parameter estimation exploration results. They include \textit{Planck}  data in combination with WMAP polarization, \textit{Planck} lensing, and high-$l$ CMB experiments, as well as additional non-CMB data as detailed in the main parameter papers.
 \end{abstract}
 
 \section*{Introduction}
@@ -15,25 +14,27 @@ The tables are arranged grouped firstly by cosmological model, and then by data 
 \begin{tabular} { l   l  }
 Data tag & Data used\\
 \hline
-${\tt CamSpec}$ & high-$l$ Planck temperature ($50\le l\le 2500$) \\
-{\tt lowl }          & low-$l$ Planck temperature ($2\le l \le 49$)  \\
-{\tt lowLike}        & low-$l$ WMAP polarization \\
-{\tt tauprior}       & A Gaussian prior on the optical depth, $\tau = 0.09 \pm 0.013$
-{\tt lensing}        & Planck lensing power spectrum reconstruction \\
+{\tt planck}         & high-$l$ \textit{Planck}  temperature ({\tt CamSpec}, $50\le l\le 2500$) \\
+{\tt lowl }          & low-$l$ \textit{Planck}  temperature ($2\le l \le 49$)  \\
+{\tt lensing}        & textit{Planck}  lensing power spectrum reconstruction \\
+{\tt lowLike}        & low-$l$ WMAP 9 polarization \\
+{\tt tauprior}       & A Gaussian prior on the optical depth, $\tau = 0.09 \pm 0.013$ \\
 {\tt BAO}            & Baryon oscillation data from DR7, DR9 and and 6DF \\
 {\tt SNLS}           & Supernova data from the Supernova Legacy Survey \\
 {\tt Union2}         & Supernova data from the Union compilation \\
 {\tt HST}            & Hubble parameter constraint from HST (Riess et al) \\
-{\tt WMAP}           & WMAP 9 year data \\
+{\tt WMAP}           & The full WMAP (temperature and polarization) 9 year data \\
 \hline
 \end{tabular}
 \vskip 1cm
 
-Data combinations are either included when running the chains, or by importance sampling. Data combinations that are added by importance sampling appear 
+Data combinations are either included when running the chains, or by importance sampling. Data combinations that are added by importance sampling appear
 at the end of the list, following the {\tt post{\textunderscore}} tag. WMAP9 chains are run from the WMAP9 likelihood code with the same baseline assumptions as \textit{Planck}, and hence
-may different slightly from those available on Lambda (e.g. the baseline model has non-zero neutrino mass).
+may different slightly from those available on Lambda (e.g. the baseline model has non-zero neutrino mass). Note that the best fits are merely examples of parameter combinations that fit the data well, due to parameter degeneracies there may be other combinations of parameters that fit the data nearly equally well.
 
-Full parameter chains are available separate from the PLA.
+Beneath each table is the minus log Likelihood $\chi^2_{\rm eff}$ for each best fit model, and also the contributions coming from each separate part of the likelihood.
+
+Full parameter chains are available separately from the PLA.
 %Files are provided in the format produced by the CosmoMC code, available from http://cosmologist.info/cosmomc.
 
 \newpage
