--- a/batch1/outputs/tableHeader.tex
+++ b/batch1/outputs/tableHeader.tex
@@ -32,7 +32,7 @@ Data combinations are either included when running the chains, or by importance 
 at the end of the list, following the {\tt post{\textunderscore}} tag. WMAP9 chains are run from the WMAP9 likelihood code with the same baseline assumptions as \textit{Planck}, and hence
 may different slightly from those available on Lambda (e.g. the baseline model has non-zero neutrino mass). Note that the best fits are merely examples of parameter combinations that fit the data well, due to parameter degeneracies there may be other combinations of parameters that fit the data nearly equally well.
 
-Beneath each table is the minus log Likelihood $\chi^2_{\rm eff}$ for each best fit model, and also the contributions coming from each separate part of the likelihood.
+Beneath each table is the minus log Likelihood $\chi^2_{\rm eff}$ for each best fit model, and also the contributions coming from each separate part of the likelihood. The $R-1$ value is also given, which measures the convergence of the sampling chains, with small values being better converged. The sampling uncertainty on quoted mean values are typically of order $R-1$ in units of the standard deviation.
 
 Full parameter chains are available separately from the PLA.
 %Files are provided in the format produced by the CosmoMC code, available from http://cosmologist.info/cosmomc.
