--- a/batch1/outputs/tableHeader.tex
+++ b/batch1/outputs/tableHeader.tex
@@ -7,7 +7,8 @@
 These tables summarize the results of \textit{Planck} nominal mission parameter estimation exploration results. They include \textit{Planck}  data in combination with WMAP polarization, \textit{Planck} lensing, and high-$l$ CMB experiments, as well as additional non-CMB data as detailed in the main parameter papers.
 \end{abstract}
 
-\section*{Introduction}
+\newpage
+\section{Introduction}
 
 The tables are arranged grouped firstly by cosmological model, and then by data combination. The name tags match those of the full chains also provided on the PLA. They all start with {\tt base} to denote the baseline model, followed by the parameter tags of any additional parameters that are also varied (as defined in the parameter paper). Data combination tags are as follows (see the parameters paper for full description and references):
 
