--- a/batch1/outputs/tableHeader.tex
+++ b/batch1/outputs/tableHeader.tex
@@ -17,7 +17,7 @@ Data tag & Data used\\
 \hline
 {\tt planck}         & high-$l$ \textit{Planck}  temperature ({\tt CamSpec}, $50\le l\le 2500$) \\
 {\tt lowl }          & low-$l$ \textit{Planck}  temperature ($2\le l \le 49$)  \\
-{\tt lensing}        & textit{Planck}  lensing power spectrum reconstruction \\
+{\tt lensing}        & \textit{Planck}  lensing power spectrum reconstruction \\
 {\tt lowLike}        & low-$l$ WMAP 9 polarization \\
 {\tt tauprior}       & A Gaussian prior on the optical depth, $\tau = 0.09 \pm 0.013$ \\
 {\tt BAO}            & Baryon oscillation data from DR7, DR9 and and 6DF \\
