--- a/batch2/outputs/tableHeader.tex
+++ b/batch2/outputs/tableHeader.tex
@@ -4,7 +4,7 @@
 %\titlerunning{Planck Cosmological Parameter Tables}
 \maketitle
 \begin{abstract}
-These tables summarize the results of \textit{Planck} 2014 parameter estimation exploration results. They include \textit{Planck} HFI high-$l$ data in combination with LFI polarization, \textit{Planck} lensing, as well as additional non-CMB data as detailed in the main parameter papers.
+These tables summarize the results of \textit{Planck} 2014 parameter estimation exploration results. They include \textit{Planck} HFI data in combination with LFI polarization, \textit{Planck} lensing, as well as additional non-CMB data as detailed in the main parameter papers.
 \end{abstract}
 
 \newpage
@@ -23,15 +23,15 @@ Data tag & Data used\\
 {\tt lowTEB}         & low-$l$ temperature and LFI polarization (bflike, $2\le l \le 29$)\\
 {\tt lowEB}          & low-$l$  LFI polarization only (bflike, $2\le l \le 29$)\\
 {\tt lensing}        & \textit{Planck}  lensing power spectrum reconstruction\\
-{\tt lensonly}        & \textit{Planck}  lensing power spectrum reconstruction only, assuming T,E fixed to best-fit spectrum + priors\\
-{\tt zre6p5}         & A hard prior that $z_{\rm re} > 6.5$
-{\tt reion}          & A hard prior that $z_{\rm re} > 6.5$ combined with the Gaussian prior $z_{\rm re} = 7\pm 1$\\
+{\tt lensonly}       & \textit{Planck}  lensing power spectrum reconstruction only; T,E fixed to best-fit spectrum + priors\\
+{\tt zre6p5}         & A hard prior $z_{\rm re} > 6.5$\\
+{\tt reion}          & A hard prior $z_{\rm re} > 6.5$, combined with Gaussian prior $z_{\rm re} = 7\pm 1$\\
 {\tt BAO}            & Baryon oscillation data from DR11LOWZ, DR11CMASS, MGS and 6DF \\
 {\tt JLA}            & Supernova data from the SDSS-II/SNLS3 Joint Light-curve Analysis \\
 {\tt H070p6}         & A conservative Hubble parameter constraint, $H_0 = 70.6\pm 3.3$ (Efstathiou; arXiv:1311.3461) \\
 {\tt abundances}     & A constraint on the Helium abundance, $Y_P^{\rm BBN} =0.2551\pm 0.0022$ (Izotov et al; arXiv:1408.6953) \\
 {\tt WMAP}           & The full WMAP (temperature and polarization) 9 year data \\
-{\tt BAORSD}         & DR11 Samushia redshift-distortion parameter, AP parameter and BAO, plus DR11LOWZ, MGS and 6DF  \\
+{\tt BAORSD}         & DR11 Samushia et al. fsigma8, AP parameter and BAO, plus DR11LOWZ, MGS and 6DF  \\
 {\tt WL}             & Ultraconservative cut of the CFHTlens weak lensing data  \\
 \hline
 \end{tabular}
