--- a/batch2/outputs/tableHeader.tex
+++ b/batch2/outputs/tableHeader.tex
@@ -36,11 +36,10 @@ Data tag & Data used\\
 \hline
 \end{tabular}
 \vskip 1cm
-The high-$l$ polarization likelihoods have {\tt TT}, {\tt TE}, {\tt EE} variants from each spectrum alone, plus the {\tt TTTEEE} joint constraint.
+The high-$l$ \textit{Planck} likelihoods have {\tt TT}, {\tt TE}, {\tt EE} variants from each spectrum alone, plus the {\tt TTTEEE} joint constraint.
 
 Data likelihoods are either included when running the chains, or by importance sampling. Data combinations that are added by importance sampling appear
-at the end of the list, following the {\tt post{\textunderscore}} tag. WMAP9 chains are run from the WMAP9 likelihood code with the same baseline assumptions as \textit{Planck}, and hence
-may different slightly from those available on Lambda (e.g. the baseline model has non-zero neutrino mass). Note that the best fits are merely examples of parameter combinations that fit the data well, due to parameter degeneracies there may be other combinations of parameters that fit the data nearly equally well.
+at the end of the list, following the {\tt post{\textunderscore}} tag. Note that the best fits are merely examples of parameter combinations that fit the data well, due to parameter degeneracies there may be other combinations of parameters that fit the data nearly equally well.
 
 Beneath each table is the minus log Likelihood $\chi^2_{\rm eff}$ for each best fit model, and also the contributions coming from each separate part of the likelihood. Mean minus log likelihoods are also given, $\bar{\chi}^2_{\rm eff}$.
 The tables also give the minus log Likelihood of the various component parts of the likelihood, where quoted values are the best-fit and mean, standard deviation (in the case of 1-sigma tables), or effective degrees of freedom ($\nu$, defined by $\sigma^2/2$).
