grid update for high H0 case

--- a/batch2/outputs/tableHeader.tex
+++ b/batch2/outputs/tableHeader.tex
@@ -29,6 +29,7 @@ Data tag & Data used\\
 {\tt BAO}            & Baryon oscillation data from DR11LOWZ, DR11CMASS, MGS and 6DF \\
 {\tt JLA}            & Supernova data from the SDSS-II/SNLS3 Joint Light-curve Analysis \\
 {\tt H070p6}         & A conservative Hubble parameter constraint, $H_0 = 70.6\pm 3.3$ (Efstathiou; arXiv:1311.3461) \\
+{\tt H073p9}         & A Hubble constraint from LMC+MW, $H_0 = 73.9\pm 2.7$ (Efstathiou; arXiv:1311.3461) \\
 {\tt abundances}     & A constraint on the Helium abundance, $Y_P^{\rm BBN} =0.2551\pm 0.0022$ (Izotov et al; arXiv:1408.6953) \\
 {\tt WMAP}           & The full WMAP (temperature and polarization) 9 year data \\
 {\tt BAORSD}         & DR11 Samushia et al. fsigma8, AP parameter and BAO, plus DR11LOWZ, MGS and 6DF  \\
