--- a/batch2/outputs/tableHeader.tex
+++ b/batch2/outputs/tableHeader.tex
@@ -25,6 +25,7 @@ Data tag & Data used\\
 {\tt lensing}        & \textit{Planck}  lensing power spectrum reconstruction\\
 {\tt lensonly}       & \textit{Planck}  lensing power spectrum reconstruction only; T,E fixed to best-fit spectrum + priors\\
 {\tt zre6p5}         & A hard prior $z_{\rm re} > 6.5$\\
+{\tt tau07}          & A Gaussian prior $\tau = 7 \pm 0.02$\\
 {\tt reion}          & A hard prior $z_{\rm re} > 6.5$, combined with Gaussian prior $z_{\rm re} = 7\pm 1$\\
 {\tt BAO}            & Baryon oscillation data from DR11LOWZ, DR11CMASS, MGS and 6DF \\
 {\tt JLA}            & Supernova data from the SDSS-II/SNLS3 Joint Light-curve Analysis \\
@@ -33,7 +34,8 @@ Data tag & Data used\\
 {\tt abundances}     & A constraint on the Helium abundance, $Y_P^{\rm BBN} =0.2551\pm 0.0022$ (Izotov et al; arXiv:1408.6953) \\
 {\tt WMAP}           & The full WMAP (temperature and polarization) 9 year data \\
 {\tt BAORSD}         & DR11 Samushia et al. fsigma8, AP parameter and BAO, plus DR11LOWZ, MGS and 6DF  \\
-{\tt WL}             & Ultraconservative cut of the CFHTlens weak lensing data  \\
+{\tt WL}, {\tt WLonly} & Ultraconservative cut of the CFHTlens weak lensing data  \\
+{\tt WLHeymans}      & Conservative cut of the CFHTlens weak lensing data  \\
 \hline
 \end{tabular}
 \vskip 1cm
