--- a/batch2/outputs/tableHeader.tex
+++ b/batch2/outputs/tableHeader.tex
@@ -22,6 +22,7 @@ Data tag & Data used\\
 {\tt lowl }          & low-$l$ \textit{Planck} temperature (Commander, $2\le l \le 29$)  \\
 {\tt lowTEB}         & low-$l$ temperature and LFI polarization (bflike, $2\le l \le 29$)\\
 {\tt lowEB}          & low-$l$  LFI polarization only (bflike, $2\le l \le 29$)\\
+{\tt WMAPTEB}       & low-$l$  LFI +WMAP temperature+polarization (bflike, $2\le l \le 29$)\\
 {\tt lensing}        & \textit{Planck}  lensing power spectrum reconstruction\\
 {\tt lensonly}       & \textit{Planck}  lensing power spectrum reconstruction only; T,E fixed to best-fit spectrum + priors\\
 {\tt zre6p5}         & A hard prior $z_{\rm re} > 6.5$\\
@@ -30,8 +31,8 @@ Data tag & Data used\\
 {\tt BAO}            & Baryon oscillation data from DR11LOWZ, DR11CMASS, MGS and 6DF \\
 {\tt JLA}            & Supernova data from the SDSS-II/SNLS3 Joint Light-curve Analysis \\
 {\tt H070p6}         & A conservative Hubble parameter constraint, $H_0 = 70.6\pm 3.3$ (Efstathiou; arXiv:1311.3461) \\
-{\tt H073p9}         & A Hubble constraint from LMC+MW, $H_0 = 73.9\pm 2.7$ (Efstathiou; arXiv:1311.3461) \\
-{\tt abundances}     & A constraint on the Helium abundance, $Y_P^{\rm BBN} =0.2551\pm 0.0022$ (Izotov et al; arXiv:1408.6953) \\
+%{\tt H073p9}         & A Hubble constraint from LMC+MW, $H_0 = 73.9\pm 2.7$ (Efstathiou; arXiv:1311.3461) \\
+%{\tt abundances}     & A constraint on the Helium abundance, $Y_P^{\rm BBN} =0.2551\pm 0.0022$ (Izotov et al; arXiv:1408.6953) \\
 {\tt WMAP}           & The full WMAP (temperature and polarization) 9 year data \\
 {\tt BAORSD}         & DR11 Samushia et al. fsigma8, AP parameter and BAO, plus DR11LOWZ, MGS and 6DF  \\
 {\tt WL}, {\tt WLonly} & Ultraconservative cut of the CFHTlens weak lensing data  \\
