planckStyle uses fixed size for single plots (9pt currently)

--- a/batch2/outputs/tableHeader.tex
+++ b/batch2/outputs/tableHeader.tex
@@ -34,9 +34,9 @@ Data tag & Data used\\
 %{\tt H073p9}         & A Hubble constraint from LMC+MW, $H_0 = 73.9\pm 2.7$ (Efstathiou; arXiv:1311.3461) \\
 %{\tt abundances}     & A constraint on the Helium abundance, $Y_P^{\rm BBN} =0.2551\pm 0.0022$ (Izotov et al; arXiv:1408.6953) \\
 {\tt WMAP}           & The full WMAP (temperature and polarization) 9 year data \\
-{\tt BAORSD}         & DR11 Samushia et al. fsigma8, AP parameter and BAO, plus DR11LOWZ, MGS and 6DF  \\
-{\tt WL}, {\tt WLonly} & Ultraconservative cut of the CFHTlens weak lensing data  \\
-{\tt WLHeymans}      & Conservative cut of the CFHTlens weak lensing data  \\
+%{\tt BAORSD}         & DR11 Samushia et al. fsigma8, AP parameter and BAO, plus DR11LOWZ, MGS and 6DF  \\
+%{\tt WL}, {\tt WLonly} & Ultraconservative cut of the CFHTlens weak lensing data  \\
+{\tt WLHeymans}      & Conservative cut of the CFHTLenS weak lensing data  \\
 \hline
 \end{tabular}
 \vskip 1cm
