--- a/batch2/outputs/tableHeader.tex
+++ b/batch2/outputs/tableHeader.tex
@@ -17,20 +17,21 @@ Data tag & Data used\\
 \hline
 {\tt plikHM}         & baseline high-$l$ \textit{Planck} power spectra ({\tt plik} cross half-mission, $30\le l\le 2508$) \\
 {\tt plikDS}         & high-$l$ \textit{Planck} ({\tt plik} cross detsets, $30\le l\le 2508$) \\
-{\tt CamSpecHM}      & alternative high-$l$ \textit{Planck}  ({\tt CamSpec} cross half-mission, $30\le l\le 2500$) \\
-{\tt CamSpecDS}      & high-$l$ \textit{Planck} ({\tt CamSpec} cross detsets, $30\le l\le 2500$) \\
+%{\tt CamSpecHM}      & alternative high-$l$ \textit{Planck}  ({\tt CamSpec} cross half-mission, $30\le l\le 2500$) \\
+%{\tt CamSpecDS}      & high-$l$ \textit{Planck} ({\tt CamSpec} cross detsets, $30\le l\le 2500$) \\
 {\tt lowl }          & low-$l$ \textit{Planck} temperature (Commander, $2\le l \le 29$)  \\
 {\tt lowTEB}         & low-$l$ temperature and LFI polarization (bflike, $2\le l \le 29$)\\
 {\tt lowEB}          & low-$l$  LFI polarization only (bflike, $2\le l \le 29$)\\
-{\tt WMAPTEB}       & low-$l$  LFI +WMAP temperature+polarization (bflike, $2\le l \le 29$)\\
+{\tt WMAPTEB}        & low-$l$ temperature, and  LFI+WMAP polarization (bflike, $2\le l \le 29$)\\
 {\tt lensing}        & \textit{Planck}  lensing power spectrum reconstruction\\
 {\tt lensonly}       & \textit{Planck}  lensing power spectrum reconstruction only; T,E fixed to best-fit spectrum + priors\\
 {\tt zre6p5}         & A hard prior $z_{\rm re} > 6.5$\\
-{\tt tau07}          & A Gaussian prior $\tau = 7 \pm 0.02$\\
+{\tt tau07}          & A Gaussian prior $\tau = 0.07 \pm 0.02$\\
 {\tt reion}          & A hard prior $z_{\rm re} > 6.5$, combined with Gaussian prior $z_{\rm re} = 7\pm 1$\\
 {\tt BAO}            & Baryon oscillation data from DR11LOWZ, DR11CMASS, MGS and 6DF \\
 {\tt JLA}            & Supernova data from the SDSS-II/SNLS3 Joint Light-curve Analysis \\
 {\tt H070p6}         & A conservative Hubble parameter constraint, $H_0 = 70.6\pm 3.3$ (Efstathiou; arXiv:1311.3461) \\
+{\tt theta}          & 100$\theta_{\rm MC}$ fixed to 1.0408
 %{\tt H073p9}         & A Hubble constraint from LMC+MW, $H_0 = 73.9\pm 2.7$ (Efstathiou; arXiv:1311.3461) \\
 %{\tt abundances}     & A constraint on the Helium abundance, $Y_P^{\rm BBN} =0.2551\pm 0.0022$ (Izotov et al; arXiv:1408.6953) \\
 {\tt WMAP}           & The full WMAP (temperature and polarization) 9 year data \\
@@ -45,8 +46,8 @@ The high-$l$ \textit{Planck} likelihoods have {\tt TT}, {\tt TE}, {\tt EE} varia
 Data likelihoods are either included when running the chains, or by importance sampling. Data combinations that are added by importance sampling appear
 at the end of the list, following the {\tt post{\textunderscore}} tag. Note that the best fits are merely examples of parameter combinations that fit the data well, due to parameter degeneracies there may be other combinations of parameters that fit the data nearly equally well.
 
-Beneath each table is the minus log Likelihood $\chi^2_{\rm eff}$ for each best fit model, and also the contributions coming from each separate part of the likelihood. Mean minus log likelihoods are also given, $\bar{\chi}^2_{\rm eff}$.
-The tables also give the minus log Likelihood of the various component parts of the likelihood, where quoted values are the best-fit and mean, standard deviation (in the case of 1-sigma tables), or effective degrees of freedom ($\nu$, defined by $\sigma^2/2$).
+Beneath each table is the $\chi^2_{\rm eff}=-2\log({\rm likelihood})$ for each best fit model, and also the contributions coming from each separate part of the likelihood. Mean minus log likelihoods are also given, $\bar{\chi}^2_{\rm eff}$.
+The tables also give the $\chi^2_{\rm eff}$ of the various component parts of the likelihood, where quoted values are the best-fit and mean, standard deviation (in the case of 1-sigma tables), or effective degrees of freedom ($\nu$, defined by $\sigma^2/2$).
 
 The $R-1$ value is also given, which measures the convergence of the sampling chains, with small values being better converged. The sampling uncertainty on quoted mean values are typically of order $R-1$ in units of the standard deviation.
 
