--- a/batch2/outputs/tableHeader.tex
+++ b/batch2/outputs/tableHeader.tex
@@ -17,8 +17,8 @@ Data tag & Data used\\
 \hline
 {\tt plikHM}         & baseline high-$l$ \textit{Planck} power spectra ({\tt plik} cross half-mission, $30\le l\le 2508$) \\
 {\tt plikDS}         & high-$l$ \textit{Planck} ({\tt plik} cross detsets, $30\le l\le 2508$) \\
-%{\tt CamSpecHM}      & alternative high-$l$ \textit{Planck}  ({\tt CamSpec} cross half-mission, $30\le l\le 2500$) \\
-%{\tt CamSpecDS}      & high-$l$ \textit{Planck} ({\tt CamSpec} cross detsets, $30\le l\le 2500$) \\
+{\tt CamSpecHM}      & alternative high-$l$ \textit{Planck}  ({\tt CamSpec} cross half-mission, $30\le l\le 2500$) \\
+{\tt CamSpecDS}      & high-$l$ \textit{Planck} ({\tt CamSpec} cross detsets, $30\le l\le 2500$) \\
 {\tt lowl }          & low-$l$ \textit{Planck} temperature (Commander, $2\le l \le 29$)  \\
 {\tt lowTEB}         & low-$l$ temperature and LFI polarization (bflike, $2\le l \le 29$)\\
 {\tt lowEB}          & low-$l$  LFI polarization only (bflike, $2\le l \le 29$)\\
@@ -32,12 +32,10 @@ Data tag & Data used\\
 {\tt JLA}            & Supernova data from the SDSS-II/SNLS3 Joint Light-curve Analysis \\
 {\tt H070p6}         & A conservative Hubble parameter constraint, $H_0 = 70.6\pm 3.3$ (Efstathiou; arXiv:1311.3461) \\
 {\tt theta}          & 100$\theta_{\rm MC}$ fixed to 1.0408
-%{\tt H073p9}         & A Hubble constraint from LMC+MW, $H_0 = 73.9\pm 2.7$ (Efstathiou; arXiv:1311.3461) \\
-%{\tt abundances}     & A constraint on the Helium abundance, $Y_P^{\rm BBN} =0.2551\pm 0.0022$ (Izotov et al; arXiv:1408.6953) \\
 {\tt WMAP}           & The full WMAP (temperature and polarization) 9 year data \\
 %{\tt BAORSD}         & DR11 Samushia et al. fsigma8, AP parameter and BAO, plus DR11LOWZ, MGS and 6DF  \\
 %{\tt WL}, {\tt WLonly} & Ultraconservative cut of the CFHTlens weak lensing data  \\
-{\tt WLHeymans}      & Conservative cut of the CFHTLenS weak lensing data  \\
+{\tt WLonlyHeymans}      & Conservative cut of the CFHTLenS weak lensing data + priors \\
 \hline
 \end{tabular}
 \vskip 1cm
