--- a/batch2/outputs/tableHeader.tex
+++ b/batch2/outputs/tableHeader.tex
@@ -31,7 +31,7 @@ Data tag & Data used\\
 {\tt BAO}            & Baryon oscillation data from DR11LOWZ, DR11CMASS, MGS and 6DF \\
 {\tt JLA}            & Supernova data from the SDSS-II/SNLS3 Joint Light-curve Analysis \\
 {\tt H070p6}         & A conservative Hubble parameter constraint, $H_0 = 70.6\pm 3.3$ (Efstathiou; arXiv:1311.3461) \\
-{\tt theta}          & 100$\theta_{\rm MC}$ fixed to 1.0408
+{\tt theta}          & 100$\theta_{\rm MC}$ fixed to 1.0408 \\
 {\tt WMAP}           & The full WMAP (temperature and polarization) 9 year data \\
 %{\tt BAORSD}         & DR11 Samushia et al. fsigma8, AP parameter and BAO, plus DR11LOWZ, MGS and 6DF  \\
 %{\tt WL}, {\tt WLonly} & Ultraconservative cut of the CFHTlens weak lensing data  \\
