--- a/batch2/outputs/tableHeader.tex
+++ b/batch2/outputs/tableHeader.tex
@@ -4,7 +4,7 @@
 %\titlerunning{Planck Cosmological Parameter Tables}
 \maketitle
 \begin{abstract}
-These tables summarize the results of \textit{Planck} 2014 parameter estimation exploration results. They include \textit{Planck} HFI data in combination with LFI polarization, \textit{Planck} lensing, as well as additional non-CMB data as detailed in the main parameter papers.
+These tables summarize the results of \textit{Planck} 2015 parameter estimation exploration results. They include \textit{Planck} HFI data in combination with LFI polarization, \textit{Planck} lensing, as well as additional non-CMB data as detailed in the main parameter papers.
 \end{abstract}
 
 \newpage
@@ -15,14 +15,14 @@ The tables are arranged grouped firstly by cosmological model, and then by data 
 \begin{tabular} { l   l  }
 Data tag & Data used\\
 \hline
-{\tt plikHM}         & baseline high-$l$ \textit{Planck} power spectra ({\tt plik} cross half-mission, $30\le l\le 2508$) \\
-{\tt plikDS}         & high-$l$ \textit{Planck} ({\tt plik} cross detsets, $30\le l\le 2508$) \\
-{\tt CamSpecHM}      & alternative high-$l$ \textit{Planck}  ({\tt CamSpec} cross half-mission, $30\le l\le 2500$) \\
-{\tt CamSpecDS}      & high-$l$ \textit{Planck} ({\tt CamSpec} cross detsets, $30\le l\le 2500$) \\
-{\tt lowl }          & low-$l$ \textit{Planck} temperature (Commander, $2\le l \le 29$)  \\
-{\tt lowTEB}         & low-$l$ temperature and LFI polarization (bflike, $2\le l \le 29$)\\
-{\tt lowEB}          & low-$l$  LFI polarization only (bflike, $2\le l \le 29$)\\
-{\tt WMAPTEB}        & low-$l$ temperature, and  LFI+WMAP polarization (bflike, $2\le l \le 29$)\\
+{\tt plikHM}         & baseline high-$\ell$ \textit{Planck} power spectra ({\tt plik} cross half-mission, $30\le l\le 2508$) \\
+{\tt plikDS}         & high-$\ell$ \textit{Planck} ({\tt plik} cross detsets, $30\le l\le 2508$) \\
+{\tt CamSpecHM}      & alternative high-$\ell$ \textit{Planck}  ({\tt CamSpec} cross half-mission, $30\le l\le 2500$) \\
+{\tt CamSpecDS}      & high-$\ell$ \textit{Planck} ({\tt CamSpec} cross detsets, $30\le l\le 2500$) \\
+{\tt lowl }          & low-$\ell$ \textit{Planck} temperature (Commander, $2\le l \le 29$)  \\
+{\tt lowTEB}         & low-$\ell$ temperature and LFI polarization (bflike, $2\le l \le 29$)\\
+{\tt lowEB}          & low-$\ell$  LFI polarization only (bflike, $2\le l \le 29$)\\
+{\tt WMAPTEB}        & low-$\ell$ temperature, and  LFI+WMAP polarization (bflike, $2\le l \le 29$)\\
 {\tt lensing}        & \textit{Planck}  lensing power spectrum reconstruction\\
 {\tt lensonly}       & \textit{Planck}  lensing power spectrum reconstruction only; T,E fixed to best-fit spectrum + priors\\
 {\tt zre6p5}         & A hard prior $z_{\rm re} > 6.5$\\
@@ -39,7 +39,7 @@ Data tag & Data used\\
 \hline
 \end{tabular}
 \vskip 1cm
-The high-$l$ \textit{Planck} likelihoods have {\tt TT}, {\tt TE}, {\tt EE} variants from each spectrum alone, plus the {\tt TTTEEE} joint constraint.
+The high-$\ell$ \textit{Planck} likelihoods have {\tt TT}, {\tt TE}, {\tt EE} variants from each spectrum alone, plus the {\tt TTTEEE} joint constraint.
 
 Data likelihoods are either included when running the chains, or by importance sampling. Data combinations that are added by importance sampling appear
 at the end of the list, following the {\tt post{\textunderscore}} tag. Note that the best fits are merely examples of parameter combinations that fit the data well, due to parameter degeneracies there may be other combinations of parameters that fit the data nearly equally well.
