update bib [ci skip]

--- a/cosmomc.bib
+++ b/cosmomc.bib
@@ -290,17 +290,6 @@
       SLACcitation   = "%%CITATION = ARXIV:1502.00612;%%",
 }
 
-#BK18
-@article{BK:2018,
-      author         = "{Keck Array and BICEP2 Collaborations}",
-      title          = "{TBA}",
-      journal        = "to be submitted",
-      collaboration  = "BICEP2, Keck Array",
-      note           = "in prep.",
-      year           = "2018"
-}
-
-
 ##Planck 2013 likelihood
 @article{Ade:2013zuv,
       author         = "{Planck Collaboration XVI}",
@@ -339,23 +328,32 @@
       author         = "{Planck Collaboration XVII}",
       title          = "{Planck 2013 results. XVII. Gravitational lensing by
                         large-scale structure}",
-      collaboration  = " Planck Collaboration",
-      year           = "2013",
+      collaboration  = "Planck",
+      journal        = "Astron. Astrophys.",
+      volume         = "571",
+      year           = "2014",
+      pages          = "A17",
+      doi            = "10.1051/0004-6361/201321543",
       eprint         = "1303.5077",
       archivePrefix  = "arXiv",
       primaryClass   = "astro-ph.CO",
-      SLACcitation   = "%%CITATION = ARXIV:1303.5077;%%",
+      reportNumber   = "CERN-PH-TH-2013-130",
+      SLACcitation   = "%%CITATION = ARXIV:1303.5077;%%"
 }
 
 #DES 1YR
 
 @article{Troxel:2017xyo,
       author         = "Troxel, M. A. and others",
-      title          = "{Dark Energy Survey Year 1 Results: Cosmological
-                        Constraints from Cosmic Shear}",
-  journal = {ArXiv e-prints},
+      title          = "{Dark Energy Survey Year 1 results: Cosmological
+                        constraints from cosmic shear}",
       collaboration  = "DES",
-      year           = "2017",
+      journal        = "Phys. Rev.",
+      volume         = "D98",
+      year           = "2018",
+      number         = "4",
+      pages          = "043528",
+      doi            = "10.1103/PhysRevD.98.043528",
       eprint         = "1708.01538",
       archivePrefix  = "arXiv",
       primaryClass   = "astro-ph.CO",
@@ -365,26 +363,34 @@
 
 @article{Prat:2017goa,
       author         = "Prat, J. and others",
-      title          = "{Dark Energy Survey Year 1 Results: Galaxy-Galaxy
-                        Lensing}",
+      title          = "{Dark Energy Survey year 1 results: Galaxy-galaxy
+                        lensing}",
       collaboration  = "DES",
-  journal = {ArXiv e-prints},
-      year           = "2017",
+      journal        = "Phys. Rev.",
+      volume         = "D98",
+      year           = "2018",
+      number         = "4",
+      pages          = "042005",
+      doi            = "10.1103/PhysRevD.98.042005",
       eprint         = "1708.01537",
       archivePrefix  = "arXiv",
       primaryClass   = "astro-ph.CO",
-      reportNumber   = "FERMILAB-PUB-17-277-PPD",
+      reportNumber   = "FERMILAB-PUB-17-277-AE",
       SLACcitation   = "%%CITATION = ARXIV:1708.01537;%%"
 }
 
 %      author         = "{DES Collaboration} and  Abbott, T. M. C. and others",
 @article{Abbott:2017wau,
-      author         = "{DES Collaboration}",
-      title          = "{\providecommand{\mockalph}[1]{}\mockalph{a}Dark Energy Survey Year 1 Results: Cosmological
-                        Constraints from Galaxy Clustering and Weak Lensing}",
+      author         = "Abbott, T. M. C. and others",
+      title          = "{Dark Energy Survey year 1 results: Cosmological
+                        constraints from galaxy clustering and weak lensing}",
       collaboration  = "DES",
-  journal = {ArXiv e-prints},
-      year           = "2017",
+      journal        = "Phys. Rev.",
+      volume         = "D98",
+      year           = "2018",
+      number         = "4",
+      pages          = "043526",
+      doi            = "10.1103/PhysRevD.98.043526",
       eprint         = "1708.01530",
       archivePrefix  = "arXiv",
       primaryClass   = "astro-ph.CO",
@@ -408,18 +414,21 @@
 
 @article{Elvin-Poole:2017xsf,
       author         = "Elvin-Poole, J. and others",
-      title          = "{Dark Energy Survey Year 1 Results: Galaxy clustering for
+      title          = "{Dark Energy Survey year 1 results: Galaxy clustering for
                         combined probes}",
       collaboration  = "DES",
-  journal = {ArXiv e-prints},
-      year           = "2017",
+      journal        = "Phys. Rev.",
+      volume         = "D98",
+      year           = "2018",
+      number         = "4",
+      pages          = "042006",
+      doi            = "10.1103/PhysRevD.98.042006",
       eprint         = "1708.01536",
       archivePrefix  = "arXiv",
       primaryClass   = "astro-ph.CO",
       reportNumber   = "FERMILAB-PUB-17-280-AE",
       SLACcitation   = "%%CITATION = ARXIV:1708.01536;%%"
 }
-
 @article{Troxel:2018qll,
       author         = "Troxel, M. A. and others",
       title          = "{Survey geometry and the internal consistency of recent
@@ -506,11 +515,15 @@ archivePrefix = "arXiv",
 
 @article{Riess:2018byc,
       author         = "Riess, Adam G. and others",
-      title          = "{\providecommand{\mockalph}[1]{}\mockalph{b}Milky Way Cepheid Standards for Measuring Cosmic
+      title          = "{Milky Way Cepheid Standards for Measuring Cosmic
                         Distances and Application to Gaia DR2: Implications for
                         the Hubble Constant}",
-  journal = {ArXiv e-prints},
+      journal        = "Astrophys. J.",
+      volume         = "861",
       year           = "2018",
+      number         = "2",
+      pages          = "126",
+      doi            = "10.3847/1538-4357/aac82e",
       eprint         = "1804.10655",
       archivePrefix  = "arXiv",
       primaryClass   = "astro-ph.CO",
