--- a/cosmomc.bib
+++ b/cosmomc.bib
@@ -157,7 +157,7 @@
 ##Planck 2018
 
 @article{PL2018,
-      author         = "{Planck Collaboration VIIII}",
+      author         = "{Planck Collaboration VIII}",
       title          = "{Planck 2018 results. VIII. Gravitational lensing}",
       collaboration  = "Planck",
       year           = "2018",
@@ -241,19 +241,7 @@
 
 #BICEP-Planck
 
-#....BK15
-@article{Ade:2018gkx,
-      author         = "{Keck Array and BICEP2 Collaborations}",
-      title          = "{BICEP2 / Keck Array x: Constraints on Primordial
-                        Gravitational Waves using Planck, WMAP, and New
-                        BICEP2/Keck Observations through the 2015 Season}",
-      collaboration  = "BICEP2, Keck Array",
-      year           = "2018",
-      eprint         = "1810.05216",
-      archivePrefix  = "arXiv",
-      primaryClass   = "astro-ph.CO",
-      SLACcitation   = "%%CITATION = ARXIV:1810.05216;%%"
-}
+
 
 #....BK14
 @article{Array:2015xqh,
@@ -273,6 +261,25 @@
       SLACcitation   = "%%CITATION = ARXIV:1510.09217;%%"
 }
 
+#BK15
+@article{Ade:2018gkx,
+      author         = "Ade, P. A. R. and others",
+      title          = "{BICEP2 / Keck Array x: Constraints on Primordial
+                        Gravitational Waves using Planck, WMAP, and New
+                        BICEP2/Keck Observations through the 2015 Season}",
+      collaboration  = "BICEP2, Keck Array",
+      journal        = "\prl",
+      volume         = "121",
+      year           = "2018",
+      pages          = "221301",
+      doi            = "10.1103/PhysRevLett.121.221301",
+      eprint         = "1810.05216",
+      archivePrefix  = "arXiv",
+      primaryClass   = "astro-ph.CO",
+      SLACcitation   = "%%CITATION = ARXIV:1810.05216;%%"
+}
+
+
 #BICEP-Planck
 @article{Ade:2015tva,
       author         = "Ade, P.A.R. and others",
@@ -289,6 +296,7 @@
       primaryClass   = "astro-ph.CO",
       SLACcitation   = "%%CITATION = ARXIV:1502.00612;%%",
 }
+
 
 ##Planck 2013 likelihood
 @article{Ade:2013zuv,
@@ -328,21 +336,22 @@
       author         = "{Planck Collaboration XVII}",
       title          = "{Planck 2013 results. XVII. Gravitational lensing by
                         large-scale structure}",
-      collaboration  = "Planck",
+      collaboration  = " Planck Collaboration",
       journal        = "Astron. Astrophys.",
       volume         = "571",
       year           = "2014",
       pages          = "A17",
       doi            = "10.1051/0004-6361/201321543",
+
+      year           = "2013",
       eprint         = "1303.5077",
       archivePrefix  = "arXiv",
       primaryClass   = "astro-ph.CO",
-      reportNumber   = "CERN-PH-TH-2013-130",
-      SLACcitation   = "%%CITATION = ARXIV:1303.5077;%%"
+      SLACcitation   = "%%CITATION = ARXIV:1303.5077;%%",
 }
 
-#DES 1YR
 
+#DES 1YR
 @article{Troxel:2017xyo,
       author         = "Troxel, M. A. and others",
       title          = "{Dark Energy Survey Year 1 results: Cosmological
@@ -381,7 +390,7 @@
 
 %      author         = "{DES Collaboration} and  Abbott, T. M. C. and others",
 @article{Abbott:2017wau,
-      author         = "Abbott, T. M. C. and others",
+      author         = "{DES Collaboration}",
       title          = "{Dark Energy Survey year 1 results: Cosmological
                         constraints from galaxy clustering and weak lensing}",
       collaboration  = "DES",
@@ -429,17 +438,22 @@
       reportNumber   = "FERMILAB-PUB-17-280-AE",
       SLACcitation   = "%%CITATION = ARXIV:1708.01536;%%"
 }
+
 @article{Troxel:2018qll,
       author         = "Troxel, M. A. and others",
       title          = "{Survey geometry and the internal consistency of recent
                         cosmic shear measurements}",
       collaboration  = "DES",
-  journal = {ArXiv e-prints},
+      journal        = {\mnras},
+      volume         = "479",
       year           = "2018",
+      number         = "4",
+      pages          = "4998-5004",
+      doi            = "10.1093/mnras/sty1889, 10.1093/mnrasl/sly108",
       eprint         = "1804.10663",
       archivePrefix  = "arXiv",
       primaryClass   = "astro-ph.CO",
-      reportNumber   = "FERMILAB-PUB-18-128-A-PPD, FERMILAB-PUB-18-128-A-PPD",
+      reportNumber   = "FERMILAB-PUB-18-128-A-PPD",
       SLACcitation   = "%%CITATION = ARXIV:1804.10663;%%"
 }
 
@@ -499,26 +513,46 @@
 
 %Hubble
 
-@ARTICLE{Riess18,
-   author  = "Riess, Adam G. and others",
-    title = "{\providecommand{\mockalph}[1]{}\mockalph{a}New Parallaxes of Galactic Cepheids from Spatially Scanning the Hubble Space Telescope: Implications for the Hubble Constant}",
-  journal = {ArXiv e-prints},
-archivePrefix = "arXiv",
-   eprint = {1801.01120},
- primaryClass = "astro-ph.SR",
- keywords = {Astrophysics - Solar and Stellar Astrophysics},
-     year = "2018",
-    month = jan,
-   adsurl = {http://adsabs.harvard.edu/abs/2018arXiv180101120R},
-  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+@article{Riess:2019cxk,
+      author         = "Riess, Adam G. and Casertano, Stefano and Yuan, Wenlong
+                        and Macri, Lucas M. and Scolnic, Dan",
+      title          = "{Large Magellanic Cloud Cepheid Standards Provide a 1\%
+                        Foundation for the Determination of the Hubble Constant
+                        and Stronger Evidence for Physics Beyond LambdaCDM}",
+      journal        = "\apj",
+      volume         = "876",
+      year           = "2019",
+      number         = "1",
+      pages          = "85",
+      doi            = "10.3847/1538-4357/ab1422",
+      eprint         = "1903.07603",
+      archivePrefix  = "arXiv",
+      primaryClass   = "astro-ph.CO",
+      SLACcitation   = "%%CITATION = ARXIV:1903.07603;%%"
 }
+
+@article{Riess18,
+      author         = "Riess, Adam G. and others",
+      title = "{\providecommand{\mockalph}[1]{}\mockalph{a}New Parallaxes of Galactic Cepheids from Spatially Scanning the Hubble Space Telescope: Implications for the Hubble Constant}",
+      journal        = "\apj",
+      volume         = "855",
+      year           = "2018",
+      number         = "2",
+      pages          = "136",
+      doi            = "10.3847/1538-4357/aaadb7",
+      eprint         = "1801.01120",
+      archivePrefix  = "arXiv",
+      primaryClass   = "astro-ph.SR",
+      SLACcitation   = "%%CITATION = ARXIV:1801.01120;%%"
+}
+
 
 @article{Riess:2018byc,
       author         = "Riess, Adam G. and others",
-      title          = "{Milky Way Cepheid Standards for Measuring Cosmic
+      title          = "{\providecommand{\mockalph}[1]{}\mockalph{b}Milky Way Cepheid Standards for Measuring Cosmic
                         Distances and Application to Gaia DR2: Implications for
                         the Hubble Constant}",
-      journal        = "Astrophys. J.",
+      journal        = "\apj",
       volume         = "861",
       year           = "2018",
       number         = "2",
@@ -529,6 +563,7 @@ archivePrefix = "arXiv",
       primaryClass   = "astro-ph.CO",
       SLACcitation   = "%%CITATION = ARXIV:1804.10655;%%"
 }
+
 
 @article{Efstathiou:2013via,
       author         = "Efstathiou, George",
@@ -559,6 +594,30 @@ archivePrefix = "arXiv",
       archivePrefix  = "arXiv",
       primaryClass   = "astro-ph.CO",
       SLACcitation   = "%%CITATION = ARXIV:1103.2976;%%",
+}
+
+%DR14 Lyman-alpha
+
+@article{Agathe:2019vsu,
+      author         = "de Sainte Agathe, Victoria and others",
+      title          = "{Baryon acoustic oscillations at $z = 2.34$ from the
+                        correlations of Ly$\alpha$ absorption in eBOSS DR14}",
+      year           = "2019",
+      eprint         = "1904.03400",
+      archivePrefix  = "arXiv",
+      primaryClass   = "astro-ph.CO",
+      SLACcitation   = "%%CITATION = ARXIV:1904.03400;%%"
+}
+
+@article{Blomqvist:2019rah,
+      author         = "Blomqvist, Michael and others",
+      title          = "{Baryon acoustic oscillations from the cross-correlation
+                        of Ly$\alpha$ absorption and quasars in eBOSS DR14}",
+      year           = "2019",
+      eprint         = "1904.03430",
+      archivePrefix  = "arXiv",
+      primaryClass   = "astro-ph.CO",
+      SLACcitation   = "%%CITATION = ARXIV:1904.03430;%%"
 }
 
 %SDSS DR12 (BAO+full shape)
